--- a/E-commerce Website/Front-End/html/login.html
+++ b/E-commerce Website/Front-End/html/login.html
@@ -7,25 +7,28 @@
     <link rel="stylesheet" href="../css/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../js/login.js"></script>
 </head>
 <body>
     <div class="page-container">
         <div class="login-box">
-            <form action="">
+            <!-- <form action=""> -->
                 <label class= "form-header">Login</label>
                 <br>
                 <label class="form-label">Username</label>
-                <input id="email" class="form-control" type="email" placeholder="Email Id">
+                <input id="email" class="form-control" type="email" placeholder="Email Id" onchange="emailValidation()">
+                <div id="email-error"></div>
                 <label class="form-label">Password</label>
-                <input id="password" class="form-control" type="password" placeholder="Password">
+                <input id="password" class="form-control" type="password" placeholder="Password" onchange="passwordValidation()">
+                <div id="password-error"></div>
                 <br>
                 <div class="login-button">
-                    <button id="submit" type="submit" class="btn btn-primary">Login</button>
+                    <button id="submit" type="submit" class="btn btn-primary" onclick="login()">Login</button>
                 </div>
+                <div id="submit-error"></div>
                 <p>Don't have a account <a href="../html/register.html">Register Here</a></p>        
-            </form>
+            <!-- </form> -->
         </div>
     </div>
-    <script src="../js/login.js"></script>
 </body>
 </html>
