--- a/Content Management Website/Front-End/html/login.html
+++ b/Content Management Website/Front-End/html/login.html
@@ -3,32 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="../css/login.css">
+    <title>HeartsContent Login</title>
+    <link   rel="stylesheet" href="../css/login.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="../js/login.js"></script>
+    <link   rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
-    <div class="page-container">
-        <div class="login-box">
-            <!-- <form action=""> -->
-                <label class= "form-header">Login</label>
-                <br>
-                <label class="form-label">Username</label>
-                <input id="email" class="form-control" type="email" placeholder="Email Id" onchange="emailValidation()">
-                <div id="email-error"></div>
-                <label class="form-label">Password</label>
-                <input id="password" class="form-control" type="password" placeholder="Password" onchange="passwordValidation()">
-                <div id="password-error"></div>
-                <br>
-                <div class="login-button">
-                    <button id="submit" type="submit" class="btn btn-primary" onclick="login()">Login</button>
-                </div>
-                <div id="submit-error"></div>
-                <p>Don't have a account <a href="../html/register.html">Register Here</a></p>        
-            <!-- </form> -->
+
+    <!--====================================================================================================================-->
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Forgot Password ?</h1>
+              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <input type="email" class="form-control" id="" placeholder="Enter Your Registered Email Id">
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-outline-warning"
+              data-bs-toggle="modal" data-bs-target="#exampleModal">Submit</button>
+            </div>
+          </div>
         </div>
     </div>
+
+
+    <!--====================================================================================================================-->
+
+
+
+    <div class="login-card">
+        <h1>LOGIN</h1>
+        <div class="box">
+            <i class="fa-solid fa-envelope"></i>
+            <input type="email" class="input-box" id="email" placeholder="Your Email Id" autocomplete="off">
+        </div>
+        <div class="box">
+            <i class="fa-solid fa-key"></i>
+            <input type="password" class="input-box" id="password" placeholder="Your Password" autocomplete="off">
+            <div class="icon-eye" onclick="showPassword()">
+                <i id="eye1" class="fa-solid fa-eye icon"></i>
+                <i id="eye2" class="fa-solid fa-eye-slash icon"></i>
+            </div>
+        </div>
+        <div class="check">
+            <input type="checkbox"><span>Remember Me</span>
+        </div>
+        <div class="login-btn">
+            <button class="btn btn-dark" onclick="login()">Login</button>
+        </div>
+        <div class="register-link">
+            <a data-bs-toggle="modal" data-bs-target="#exampleModal">Forget Password?</a>
+            <a href="./register.html">I'm new here <i class="fa fa-arrow-right"></i></a>
+        </div>
+    </div>
+    
+    <script src="../js/login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
