--- a/Content Management Website/Front-End/html/register.html
+++ b/Content Management Website/Front-End/html/register.html
@@ -3,63 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-    <link rel="stylesheet" href="../css/register.css">
+    <title>HeartsContent Login</title>
+    <link   rel="stylesheet" href="../css/register.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link   rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
-    <div class="page-container">
-        <div class="register-box">
-            <form action="">
-                <h5 class="form-header">Register</h5>
-                <br>
-                <div class="inner-form-div">
-                    <div style="margin-right: 5rem;">
-                        <label class="form-label">Name</label>
-                        <input id="name" class="form-control" type="text" placeholder="Name">
-                    </div>
-                    <div>
-                        <label class="form-label">Email</label>
-                        <input id="email" class="form-control" type="email" placeholder="Email">
-                    </div>
-                </div>
-                <div class="inner-form-div">
-                    <div style="margin-right: 5rem;">
-                        <label class="form-label">Mobile Number</label>
-                        <input id="mobile" class="form-control" type="text" placeholder="Mobile Number">
-                    </div>
-                    <div>
-                        <label class="form-label">Country</label>
-                        <input  id="country" class="form-control" type="text" placeholder="Country">
-                    </div>
-                </div>
-                <div class="inner-form-div">
-                    <div style="margin-right: 5rem;">
-                        <label class="form-label">State</label>
-                        <input id="state" class="form-control" type="text" placeholder="State">
-                    </div>
-                    <div>
-                        <label class="form-label">District</label>
-                        <input id="district" class="form-control" type="text" placeholder="District">
-                    </div>
-                </div>
-                <div class="inner-form-div">
-                    <div style="margin-right: 5rem;">
-                        <label class="form-label">Password</label>
-                        <input id="password" class="form-control" type="password" placeholder="Password">
-                    </div>
-                    <div>
-                        <label class="form-label">Re-enter Password</label>
-                        <input id="rePassword" class="form-control" type="password" placeholder="Re-enter Password">
-                    </div>
-                </div>
-                <div class="register-button">
-                    <button id="submit" type="submit" class="btn btn-primary">Register</button>
-                </div>
-                <p>Already have a account <a href="../html/login.html">Login Here</a></p>        
-            </form>
+
+
+    <div class="register-card">
+        <h1>REGISTER</h1>
+        <div class="box">
+            <i class="fa-solid fa-user"></i>
+            <input type="text" class="input-box" id="name" placeholder="Name" autocomplete="off">
+        </div>
+        <div class="box">
+            <i class="fa-solid fa-envelope"></i>
+            <input type="email" class="input-box" id="email" placeholder="Email Id" autocomplete="off">
+        </div>
+        <div class="box">
+            <i class="fa-solid fa-key"></i>
+            <input type="password" class="input-box" id="password" placeholder="Password" autocomplete="off">
+            <div class="icon-eye" onclick="showPassword()">
+                <i id="eye1" class="fa-solid fa-eye icon"></i>
+                <i id="eye2" class="fa-solid fa-eye-slash icon"></i>
+            </div>
+        </div>
+        <div class="box">
+            <i class="fa-solid fa-key"></i>
+            <input type="password" class="input-box" id="re-password" placeholder="Re-enter Password">
+            <div class="icon-eye" onclick="showRePassword()">
+                <i id="eye3" class="fa-solid fa-eye icon"></i>
+                <i id="eye4" class="fa-solid fa-eye-slash icon"></i>
+            </div>
+        </div>
+        <div class="register-btn">
+            <button class="btn btn-dark" onclick="register()">Register</button>
+        </div>
+        <div class="login-link">
+            <a href="./login.html">Already have an account?<i class="fa fa-arrow-right"></i></a>
         </div>
     </div>
+    
+    <script src="../js/register.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
