--- a/Content Management Website/Front-End/index.html
+++ b/Content Management Website/Front-End/index.html
@@ -54,7 +54,64 @@
             </div>
         </div>
     </div>
+    
+    <div class="about">
+        <div class="one">
+            <h1>ABOUT ME</h1>
+        </div>
+        <div class="two">
+            <div class="person">
+                <img src="./assets/images/Shreejay.jpg">
+                <div class="person-info">
+                    <h3>Shreejay Mane</h3>
+                    <p>B.E. (Civil), M.Tech. (Structure), <br>
+                        PG-DAC (Advanced Computing)</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
+
+    <div class="footer">
+        <div class="footer-container">
+            <div class="box logo">
+                <h3>HeartsContent</h3>
+                <p>Write what your heart says</p>
+                <div class="share">
+                    <a><i class="fa-brands fa-facebook"></i></a>&nbsp;&nbsp;
+                    <a><i class="fa-brands fa-twitter"></i></a>&nbsp;&nbsp;
+                    <a><i class="fa-brands fa-instagram"></i></a>&nbsp;&nbsp;
+                    <a><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+            </div>
+            <div class="box">
+                <h3>Contact Me</h3>
+                <a class="links"><i class="fa-solid fa-phone"></i> +917756800471</a>
+                <a class="links"><i class="fas fa-envelope"></i> shreejaymane15@gmail.com</a>
+                <a class="links"><i class="fas fa-map-marker-alt"></i> Sangli, Maharashtra, India</a>
+            </div>
+            <div class="box">
+                <h3>Quick Links</h3>
+                <a class="links"><i class="fa-solid fa-arrow-right"></i>Home</a>
+                <a class="links"><i class="fa-solid fa-arrow-right"></i>Blogs</a>
+                <a class="links"><i class="fa-solid fa-arrow-right"></i>About Us</a>
+                <a class="links"><i class="fa-solid fa-arrow-right"></i>Contact Us</a>
+            </div>
+            <div class="box newsletter">
+                <h3>Newsletter</h3>
+                <p>Subscribe for latest updates</p>
+                <div class="email">
+                    <input type="email" class="email" placeholder="Your Email Id">
+                </div>
+                <div>
+                    <input type="submit" value="subscribe" class="btn btn-info">
+                </div>
+            </div> 
+        </div>
+        <div class="credits">
+            HeartsContent @ 2023 | All Rights Reserved
+        </div>  
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
