Backend in progress

--- a/Content Management Website/Front-End/index.html
+++ b/Content Management Website/Front-End/index.html
@@ -11,25 +11,27 @@
 <body>
     <div class="background">
         <div class="nav-options">
-            <a href="" class="btn btn-outline-warning">Login</a>
-            <a href="" class="btn btn-outline-warning">Register</a>
+            <a href="./html/login.html" class="btn btn-dark">Login</a>
+            <a href="./html/register.html" class="btn btn-dark">Register</a>
         </div>
         <div class="center-content">
             <div class="content-header">
-                <h1>Website Name</h1>
-                <p>Website Tagline</p>
-                <button class="btn btn-dark">Write a blog</button>
+                <h1>Heart's Content</h1>
+                <p>Crafting Heartfelt Stories</p>
+                <div class="blog-button">
+                    <button class="btn btn-dark">Write a blog</button>
+                </div>
             </div>
         </div>
     </div>
-    
-    <div class="blogs-section">
+        <hr style="border: 0px;">
         <div class="heading">
             <h1>Most Read</h1>
         </div>
+        <div class="blogs-section">
         <div class="top-blogs">
             <div class="blog">
-                <img src="./assets/images/background.jpg" alt="Most Read Blog">
+                <img src="./assets/images/Quote.jpg" alt="Most Read Blog">
                 <h3>Blog Title Blog Title</h3>
                 <p class="author">-By Some Author-</p>
                 <p class="date">Last Updated June 21, 2022</p>
@@ -37,7 +39,7 @@
                     commodi recusandae eius. Quos non harum error obcaecati...</p>
             </div>
             <div class="blog">
-                <img src="./assets/images/background.jpg" alt="Most Read Blog">
+                <img src="./assets/images/Most Read.jpg" alt="Most Read Blog">
                 <h3>Blog Title Blog Title</h3>
                 <p class="author">-By Some Author-</p>
                 <p class="date">Last Updated June 21, 2022</p>
@@ -45,7 +47,7 @@
                     commodi recusandae eius. Quos non harum error obcaecati...</p>
             </div>
             <div class="blog">
-                <img src="./assets/images/background.jpg" alt="Most Read Blog">
+                <img src="./assets/images/background.png" alt="Most Read Blog">
                 <h3>Blog Title Blog Title</h3>
                 <p class="author">-By Some Author-</p>
                 <p class="date">Last Updated June 21, 2022</p>
@@ -54,7 +56,9 @@
             </div>
         </div>
     </div>
-    
+    <div>
+        <hr style="border: 0px;">
+    </div>
     <div class="about">
         <div class="one">
             <h1>ABOUT ME</h1>
@@ -63,12 +67,14 @@
             <div class="person">
                 <img src="./assets/images/Shreejay.jpg">
                 <div class="person-info">
-                    <h3>Shreejay Mane</h3>
-                    <p>B.E. (Civil), M.Tech. (Structure), <br>
-                        PG-DAC (Advanced Computing)</p>
+                    <p>Hey there! I'm Shreejay Mane, <br>a software developer with a love for turning ideas into digital realities.<br> Welcome to my corner of the web!</p>
                 </div>
             </div>
         </div>
+    </div>
+
+    <div>
+        <hr style="border: 0px">
     </div>
 
 
