--- a/Content Management Website/Front-End/html/login.html
+++ b/Content Management Website/Front-End/html/login.html
@@ -33,7 +33,12 @@
 
     <!--====================================================================================================================-->
 
-
+    <!-- ============= -->
+    <div id="toast" class="hide">
+    </div>
+        <!-- ============= -->
+    
+    
 
     <div class="login-card">
         <h1>LOGIN</h1>
