--- a/Content Management Website/Front-End/html/register.html
+++ b/Content Management Website/Front-End/html/register.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 
+    <!-- ============= -->
+<div id="toast" class="hide">
+</div>
+    <!-- ============= -->
 
     <div class="register-card">
         <h1>REGISTER</h1>
@@ -29,6 +33,9 @@
                 <i id="eye2" class="fa-solid fa-eye-slash icon"></i>
             </div>
         </div>
+
+        <!-- To show error -->
+        <div id="password-error"></div>
         <div class="box">
             <i class="fa-solid fa-key"></i>
             <input type="password" class="input-box" id="re-password" placeholder="Re-enter Password">
@@ -44,6 +51,8 @@
             <a href="./login.html">Already have an account?<i class="fa fa-arrow-right"></i></a>
         </div>
     </div>
+
+    
     
     <script src="../js/register.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
