--- a/Content Management Website/Front-End/html/dashboard.html
+++ b/Content Management Website/Front-End/html/dashboard.html
@@ -10,151 +10,142 @@
 	</div>
 	<div class="sidebar" id="sidebar">
 		<header>
-			<h1>Heart's Content</h1>
+			<h3>Heart's Content</h3>
+			<hr>
 			<nav>
 			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Notification</a></li>
-				<li><a href="#">Popular</a></li>
-				<li><a href="#">Archive</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Contact</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Settings</a></li>
+				<li>
+					<i class="fa-solid fa-house"></i>
+					<a href="#">Home</a>
+				</li>
+				<li>
+					<i class="fa-solid fa-bell"></i>
+					<a href="#">Notification</a>
+				</li>
+				<li>
+					<i class="fa-solid fa-star"></i>
+					<a href="#">Popular</a>
+				</li>
+				<li>
+					<i class="fa-solid fa-bookmark"></i>
+					<a href="#">Archive</a>
+				</li>
+				<li>
+					<i class="fa-solid fa-square-pen"></i>
+					<a href="#">Blog</a>
+				</li>
+				<li>
+					<i class="fa-solid fa-phone"></i>
+					<a href="#">Contact</a>
+				</li>
+				<li>
+					<i class="fa-solid fa-circle-exclamation"></i>
+					<a href="#">About</a>
+				</li>
+				<li>
+					<i class="fa-solid fa-gears"></i>
+					<a href="#">Settings</a>
+				</li>
 			</ul>
 			</nav>
 		</header>
 	</div>
+	<div class="top-content">
+		<div class="search">
+			<input type="text" name="search" placeholder="Search...">
+			<div class="search-icon">
+				<i class="fa-solid fa-magnifying-glass"></i>		
+			</div>
+		</div>
+		<div class="user_image">
+			<img src="../assets/images/Shreejay.jpg" align="right"/>
+			<h4 id="username">Shreejay Mane</h4>
+		</div>
+	</div>
 	<div class="body">
 		<main>
-			<section id="trending">
+			<section id="trending" class="trending">
 				<h2>Top Trending Article</h2>
+				<div class="trending-div">
+					<div class="trending-content">	
+						<h3>"From Lens to Screen". The Art of Captivating Storytelling Through Videography</h3>
+						<p>Master visual storytelling with "From Lens to Screen". Create captivating videos with expert camera techniques, shot composition, and editing.</p>
+						<br>
+						<div class="read-now-button">
+							<a href="#">Read Now</a>
+						</div>
+					</div>
+					<div class="trending-image">
+						<img src="../assets/images/background.png"/>
+					</div>
+				</div>
+			</section>
+		<section id="suggestions" class="suggestions">
+			<h2>Match for You</h2>
+			<div class="suggestions-articles">
 				<article>
-					<h3>"From Lens to Screen". The Art of Captivating Storytelling Through Videography</h3>
-					<p>Master visual storytelling with "From Lens to Screen". Create captivating videos with expert camera techniques, shot composition, and editing.</p>
+					<img src="../assets/images/1.jpg">
+					<h3>Beyond the Frame: The Art and Technique of Videography</h3>
+					<p>Elevate your videography master camera operation, lighting, audio, and editing.</p>
 					<a href="#">Read Now ></a>
 				</article>
-			</section>
-		<section id="suggestions">
-			<h2>Match for You</h2>
-			<article>
-				<h3>Beyond the Frame: The Art and Technique of Videography</h3>
-				<p>Elevate your videography master camera operation, lighting, audio, and editing.</p>
-				<a href="#">Read Now ></a>
-			</article>
-			<article>
+				<article>
+					<img src="../assets/images/1.jpg">
+					<h3>Mastering UI/UX Design: Creating Engaging Digital Interfaces</h3>
+					<p>Learn to create visually pleasing and user-friendly digital experiences.</p>
+					<a href="#">Read Now ></a>
+				</article>
+			</div>
+		</section>
+	</main>
+	<div class="second-partition">
+		<section id="recommendations" class="recommendations">
+			<div class="rec-heading">
+				<h2>Recommended for you
+					<a href="" class="rec-view">View All</a>
+				</h2>
+			</div>
+			<hr>
+			<div class="rec-user">
+				<img src="../assets/images/Shreejay.jpg"/>
+				<h3>Kazuo Nakamura</h3>
+				<a href="#">Follow</a>
+			</div>
+			<div class="rec-user">
+				<img src="../assets/images/Shreejay.jpg"/>
+				<h3>Anusha Patel</h3>
+				<a href="#">Follow</a>
+			</div>
+			<div class="rec-user">
+				<img src="../assets/images/Shreejay.jpg"/>
+				<h3>Tuan Nguyen</h3>
+				<a href="#">Follow</a>
+			</div>
+		</section>
+		<section id="con-reading" class="con-reading">
+			<div class="con-reading-heading">
+				<h2>Continue Reading
+					<a href="" class="con-view">View All</a>
+				</h2>
+			</div>
+			<hr>
+			<div class="con-article">
 				<h3>Q</h3>
 				<h4>Mastering UI/UX Design: Creating Engaging Digital Interfaces</h4>
 				<p>Learn to create visually pleasing and user-friendly digital experiences.</p>
 				<a href="#">Read Now ></a>
-			</article>
+			</div>
+			<div class="con-article">
+				<h3>Q</h3>
+				<h4>Mastering UI/UX Design: Creating Engaging Digital Interfaces</h4>
+				<p>Learn to create visually pleasing and user-friendly digital experiences.</p>
+				<a href="#">Read Now ></a>
+			</div>
 		</section>
-		<section id="recommendations">
-			<h2>Recommended for you</h2>
-			<article>
-				<h3>Kazuo Nakamura</h3>
-				<a href="#">Read Now ></a>
-			</article>
-			<article>
-				<h3>Anusha Patel</h3>
-				<a href="#">Read Now ></a>
-			</article>
-			<article>
-				<h3>Tuan Nguyen</h3>
-				<a href="#">Read Now ></a>
-			</article>
-			<article>
-				<h3>Aiko Nakamura</h3>
-				<a href="#">Read Now ></a>
-			</article>
-		</section>
-		<section id="trending">
-			<h2>Top Trending Article</h2>
-			<article>
-				<h3>"From Lens to Screen". The Art of Captivating Storytelling Through Videography</h3>
-				<p>Master visual storytelling with "From Lens to Screen". Create captivating videos with expert camera techniques, shot composition, and editing.</p>
-				<a href="#">Read Now ></a>
-			</article>
-		</section>
-	<section id="suggestions">
-		<h2>Match for You</h2>
-		<article>
-			<h3>Beyond the Frame: The Art and Technique of Videography</h3>
-			<p>Elevate your videography master camera operation, lighting, audio, and editing.</p>
-			<a href="#">Read Now ></a>
-		</article>
-		<article>
-			<h3>Q</h3>
-			<h4>Mastering UI/UX Design: Creating Engaging Digital Interfaces</h4>
-			<p>Learn to create visually pleasing and user-friendly digital experiences.</p>
-			<a href="#">Read Now ></a>
-		</article>
-	</section>
-	<section id="recommendations">
-		<h2>Recommended for you</h2>
-		<article>
-			<h3>Kazuo Nakamura</h3>
-			<a href="#">Read Now ></a>
-		</article>
-		<article>
-			<h3>Anusha Patel</h3>
-			<a href="#">Read Now ></a>
-		</article>
-		<article>
-			<h3>Tuan Nguyen</h3>
-			<a href="#">Read Now ></a>
-		</article>
-		<article>
-			<h3>Aiko Nakamura</h3>
-			<a href="#">Read Now ></a>
-		</article>
-	</section>			<section id="trending">
-		<h2>Top Trending Article</h2>
-		<article>
-			<h3>"From Lens to Screen". The Art of Captivating Storytelling Through Videography</h3>
-			<p>Master visual storytelling with "From Lens to Screen". Create captivating videos with expert camera techniques, shot composition, and editing.</p>
-			<a href="#">Read Now ></a>
-		</article>
-	</section>
-	<section id="suggestions">
-		<h2>Match for You</h2>
-		<article>
-			<h3>Beyond the Frame: The Art and Technique of Videography</h3>
-			<p>Elevate your videography master camera operation, lighting, audio, and editing.</p>
-			<a href="#">Read Now ></a>
-		</article>
-		<article>
-			<h3>Q</h3>
-			<h4>Mastering UI/UX Design: Creating Engaging Digital Interfaces</h4>
-			<p>Learn to create visually pleasing and user-friendly digital experiences.</p>
-			<a href="#">Read Now ></a>
-		</article>
-	</section>
-	<section id="recommendations">
-		<h2>Recommended for you</h2>
-		<article>
-			<h3>Kazuo Nakamura</h3>
-			<a href="#">Read Now ></a>
-		</article>
-		<article>
-			<h3>Anusha Patel</h3>
-			<a href="#">Read Now ></a>
-		</article>
-		<article>
-			<h3>Tuan Nguyen</h3>
-			<a href="#">Read Now ></a>
-		</article>
-		<article>
-			<h3>Aiko Nakamura</h3>
-			<a href="#">Read Now ></a>
-		</article>
-	</section>
-		</main>
+	</div>
 		<footer>
 			<p>Copyright © 2023 EBookHive</p>
 		</footer>
-		<script src="scripts.js"></script>
-	</div>
 	<script src="../js/dashboard.js"></script>
 </body>
 </html>
