--- a/Content Management Website/Front-End/html/login.html
+++ b/Content Management Website/Front-End/html/login.html
@@ -44,11 +44,11 @@
         <h1>LOGIN</h1>
         <div class="box">
             <i class="fa-solid fa-envelope"></i>
-            <input type="email" class="input-box" id="email" placeholder="Your Email Id" autocomplete="off">
+            <input type="email" class="input-box" id="email" placeholder="Email Id" autocomplete="off">
         </div>
         <div class="box">
             <i class="fa-solid fa-key"></i>
-            <input type="password" class="input-box" id="password" placeholder="Your Password" autocomplete="off">
+            <input type="password" class="input-box" id="password" placeholder="Password" autocomplete="off">
             <div class="icon-eye" onclick="showPassword()">
                 <i id="eye1" class="fa-solid fa-eye icon"></i>
                 <i id="eye2" class="fa-solid fa-eye-slash icon"></i>
